Merge branch 'apps-4738' into 'main'
APPS-4738 Don't use y as variable name for SolveODE

See merge request ggb/geogebra!9546

GitOrigin-RevId: 9a8b9419f858818967ff37a9c82139f31bf6e913